//Film_database
Table phim{
    ma_phim int [pk, increment]
    ten_phim varchar(255) [not null]
    thoi_luong int [not null]
    ngay_phat_hanh date
    ngon_ngu varchar(100)
    trang_thai tinyint [not null]
    gioi_han_tuoi tinyint [not null]
    url_anh varchar(255)

    created_at timestamp
    updated_at timestamp
}
/*
    thoi_luong: phut
    trang_thai:
        0. Sap Chieu
        1. Dang Chieu
        2. Ngung Chieu
    gioi_han_tuoi:
        0. P
        1. K
        2. T13
        3. T16
        4. T18
        5. T21
*/

Table dao_dien{
    ma_dao_dien int [pk, increment]
    ten_dao_dien varchar(255) [not null]

    created_at timestamp
    updated_at timestamp
}

Table the_loai{
    ma_the_loai int [pk, increment]
    ten_the_loai varchar(100) [not null, unique]

    created_at timestamp
    updated_at timestamp
}

Table dao_dien_phim{
    ma_phim int [pk, ref : > phim.ma_phim]
    ma_dao_dien int [pk, ref : > dao_dien.ma_dao_dien]
}

Table the_loai_phim{
    ma_phim int [pk, ref : > phim.ma_phim]
    ma_the_loai int [pk, ref : > the_loai.ma_the_loai]
}

//Threater_database
Table rap{
    ma_rap int [pk, increment]
    ten_rap varchar(255) [not null]
    dia_chi varchar(255)

    created_at timestamp
    updated_at timestamp
}

Table loai_phong{
    ma_loai_phong int [pk, increment]
    ten_loai_phong varchar(100) [not null, unique]

    created_at timestamp
    updated_at timestamp
}

Table phong_chieu{
    ma_phong int [pk, increment]
    ten_phong varchar(255) [not null]
    ma_rap int [not null, ref: > rap.ma_rap]
    ma_loai_phong int [not null, ref: > loai_phong.ma_loai_phong]
    trang_thai tinyint [not null]

    created_at timestamp
    updated_at timestamp
}
/*
    trang_thai: 
        0. Hoat Dong
        1. Bao Tri
        2. Ngung Su Dung
*/

//Seat_database
Table loai_ghe{
    ma_loai_ghe int [pk, increment]
    ten_loai_ghe varchar(255) [not null, unique]

    created_at timestamp
    updated_at timestamp
}

Table ghe{
    ma_ghe int [pk, increment]
    ma_phong int [not null, ref: > phong_chieu.ma_phong]
    ma_loai_ghe int [not null, ref: > loai_ghe.ma_loai_ghe]
    hang varchar(10) [not null]
    cot varchar(10) [not null]
    trang_thai bit [not null]

    created_at timestamp
    updated_at timestamp

    indexes { //tranh trung ma ghe
        (ma_phong, hang, cot) [unique]
    }
}
/*
    trang_thai:
        0. Khong Hoat Dong
        1. Hoat Dong
*/

//Showcase_datebase
Table suat_chieu{
    ma_suat_chieu int [pk, increment]
    ma_phim int [not null, ref: > phim.ma_phim]
    ma_phong int [not null, ref: > phong_chieu.ma_phong]
    ngon_ngu_trinh_chieu tinyint [not null]
    tg_bat_dau datetime [not null]
    tg_ket_thuc datetime [not null]
    trang_thai tinyint [not null]

    created_at timestamp
    updated_at timestamp
}
/*
    ngon_ngu_trinh_chieu:
        0. Khong
        1. Long Tieng
        2. Thuyet Minh
        3. Phu De
    trang_thai:
        0. Huy
        1. Sap Chieu
        2. Dang Chieu
        3. Ket Thuc
*/

//Ticket_database
Table bang_gia_ve{
    ma_bang_gia int [pk, increment]
    ma_loai_ghe int [not null, ref: > loai_ghe.ma_loai_ghe]
    ma_loai_phong int [not null, ref: > loai_phong.ma_loai_phong]
    gia decimal(10,2) [not null]

    created_at timestamp
    updated_at timestamp

    indexes {
        (ma_loai_ghe, ma_loai_phong) [unique]
    }
}

Table ve{
    ma_ve int [pk, increment]
    ma_suat_chieu int [not null, ref: > suat_chieu.ma_suat_chieu]
    ma_ghe int [not null, ref: > ghe.ma_ghe]
    ma_bang_gia int [not null, ref: > bang_gia_ve.ma_bang_gia]
    trang_thai tinyint [not null]

    created_at timestamp
    updated_at timestamp

    indexes {
        (ma_suat_chieu, ma_ghe) [unique]
    }
}
/*
    trang_thai:
        0. Chua Ban
        1. Da Ban
        2. Da Doi
        3. Da Huy
*/
//Product_database
Table loai_san_pham{
    ma_loai_san_pham int [pk, increment]
    ten_loai_san_pham varchar(255) [not null, unique]

    created_at timestamp
    updated_at timestamp
}

Table san_pham{
    ma_san_pham int [pk, increment]
    ten_san_pham varchar(255) [not null]
    ma_loai_san_pham int [not null, ref: > loai_san_pham.ma_loai_san_pham]
    gia_co_ban decimal(10,2) [not null]
    so_luong_ton int [not null]
    trang_thai tinyint [not null]
    url_anh varchar(255)

    created_at timestamp
    updated_at timestamp
}
/*
    trang_thai:
        0. Ngung Ban
        1. Dang Ban
        2. Het Hang
*/
//Employees_database
Table chuc_vu{
    ma_chuc_vu int [pk, increment]
    ten_chuc_vu varchar(100) [not null, unique]

    created_at timestamp
    updated_at timestamp
}

Table nhan_vien{
    ma_nhan_vien int [pk, increment]
    ten_nhan_vien varchar(255) [not null]
    gioi_tinh bit
    so_dien_thoai varchar(20) [unique]
    ngay_sinh date
    email varchar(255) [unique]
    ngay_vao_lam date
    ma_chuc_vu int [not null, ref: > chuc_vu.ma_chuc_vu]
    trang_thai tinyint [not null]

    created_at timestamp
    updated_at timestamp
}
/*
    gioi_tinh:
        0. Nu
        1. Nam

    trang_thai:
        0. Da Nghi
        1. Dang Lam
        2. Tam Nghi
*/

Table tai_khoan{
    ma_tai_khoan int [pk, increment]
    ma_nhan_vien int [not null, unique, ref: > nhan_vien.ma_nhan_vien]
    ten_tai_khoan varchar(255) [not null, unique]
    mat_khau varchar(255) [not null]
    trang_thai bit [not null]

    created_at timestamp
    updated_at timestamp
}
/*
    trang_thai:
        0. Bi Khoa
        1. Hoat Dong
*/

//Invoice_database
Table hoa_don{
    ma_hoa_don int [pk, increment]
    ma_nhan_vien int [not null, ref: > nhan_vien.ma_nhan_vien]
    phuong_thuc_thanh_toan tinyint [not null]
    tong_tien decimal(10,2) [not null, default: 0]
    trang_thai tinyint [not null]
    thoi_gian_thanh_toan datetime

    created_at timestamp
    updated_at timestamp
}
/*
    phuong_thuc_thanh_toan:
        0. Tien Mat
        1. Chuyen Khoan

    trang_thai:
        0. That bai
        1. Thanh cong
*/
Table hoa_don_ve{
    ma_hoa_don int [pk, ref: > hoa_don.ma_hoa_don]
    ma_ve int [pk, ref: > ve.ma_ve]
    don_gia decimal(10,2) [not null]
}

Table hoa_don_san_pham{
    ma_hoa_don int [pk, ref: > hoa_don.ma_hoa_don]
    ma_san_pham int [pk, ref: > san_pham.ma_san_pham]
    so_luong_tong int [not null, default: 1]
    don_gia decimal(10,2) [not null]
    thanh_tien decimal(10,2) [not null]
}